--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-        Team SoloMid vs Tempo Storm, Jun 23 2020 — SiegeGG
+        PWE vs Oblivion (Summer League, Week 5)
     </title>
     <meta name="description" content="Opening up Rainbow Six Esports. Statistics, analysis, news and match information">
     <meta name="theme-color" content="#d81112">
