--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <title>
         PWE vs Oblivion (Summer League, Week 5)
     </title>
+    <meta property="csrf-token" name="csrf-token" content="qiJ48cNCwPuK6LEPhrQ64vhBh1EsrXP6wG8YRZi2">
+    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@3/dark.css" rel="stylesheet">
+    <link href="https://siege.gg/css/datatables.min.css?ver=b6d85f09" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://siege.gg/css/app.min.css?ver=b6d85f09">
+    <script async="" src="https://www.google-analytics.com/analytics.js"></script><script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-117149899-1', 'auto');
+    ga('send', 'pageview');
+</script>
     <style>
         .slot > a:before {
             content: "Advertisement" !important;
