--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>
         PWE vs Oblivion (Summer League, Week 5)
     </title>
+    <meta name="description" content="Match Stats">
+    <meta name="theme-color" content="#d81112">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="PWE v Oblivion, July 6 2020">
+    <meta property="og:description" content="Match Stats">
+    <meta property="og:url" content="https://alphaflux.github.io/SummerLeague_PWEvOblivion_2020.07.06/">
+    <meta property="og:site_name" content="Alpha Flux">
+    <meta property="og:image" content="https://siege.gg/img/sgg-opengraph.jpg">
     <meta property="csrf-token" name="csrf-token" content="qiJ48cNCwPuK6LEPhrQ64vhBh1EsrXP6wG8YRZi2">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
